# lab

.github/workflows/: cc.yml  ci.yml
dynamic_library/: CMakeLists.txt  main.cpp
dynamic_library/so/: CMakeLists.txt  lib_dynamic.cpp  lib_dynamic.h
mm/: CMakeLists.txt  ia32_modrm_map.cpp  ia32_opcode_map.cpp  mini_disassembler.cpp  mini_disassembler.h  mini_disassembler_types.h  patch_functions.cpp  preamble_patcher.cpp  preamble_patcher.h  preamble_patcher_test.cpp  preamble_patcher_with_stub.cpp
nm/: CMakeLists.txt  nm-pdb.cpp
vtable_hook/: CMakeLists.txt  main.cpp
vtable_layout/: a.cpp
