CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(dynamic_library)
SET(CMAKE_BUILD_TYPE Debug)


ADD_SUBDIRECTORY(so)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY .)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY .)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG .)

LINK_DIRECTORIES(so)
LINK_LIBRARIES(a_dynamic_library)

ADD_EXECUTABLE(a.out main.cpp)
